Primo rilascio BETA (UCP v0.9.6)
- Aggiunta scelta porta e stato debug dal config.cfg

--- a/config.cfg
+++ b/config.cfg
@@ -5,13 +5,15 @@ email_paypal = francesco.d.r@outlook.it
 # ----------------------
 [WEB-APP]
 state = 1
+porta = 80
+debug = 1
 # ----------------------
 [MYSQL]
-host = 127.0.0.1
+host = 185.25.206.236
 port = 3306
 database_name = serversamp
-username = root
-password = 
+username = kekko.py
+password = ciaociao123
 # ----------------------
 [CENTRAL-SERVER]
 host = 127.0.0.1
