Primo rilascio BETA (UCP v1.0.0)
#   • Modificata funzione Registra Reato + Metti ricercato [SEZ. POLIZIA]
#   • Aggiunta funzione Lista Ricercati [SEZ. POLIZIA]
#   • Aggiunta funzione Rimuovi ricercato [SEZ. POLIZIA]
#   • Impostati Log più precisi tramite telegram per polizia.
#   • Aggiunta foto singola per le skin hd.
#   • Aggiunta la semplice segnalazione nella fedina. [SEZ. POLIZIA]
#   • Aggiunta News automatica quando c'è un nuovo ricercato.

--- a/funzioni.cfg
+++ b/funzioni.cfg
@@ -19,6 +19,8 @@ avviso_comunale = 1
 mess_priv = 1
 pulizia_fedina = 1
 veicoli_seq = 1
+visualizza_ricercati = 1
+rimuovi_ricercati = 1
 
 [MEDICI]
 visualizza_cartella = 1
