--- a/gradi_fazioni.cfg
+++ b/gradi_fazioni.cfg
@@ -8,6 +8,8 @@ avviso_comunale = 2
 mess_priv = 4
 pulizia_fedina = 1
 rank_veicoli_seq = 9
+visualizza_ricercati = 9
+rimuovi_ricercati = 9
 
 [MEDICI]
 visualizza_cartella = 10
