--- a/config.cfg
+++ b/config.cfg
@@ -5,15 +5,15 @@ email_paypal = francesco.d.r@outlook.it
 # ----------------------
 [WEB-APP]
 state = 1
-porta = 80
+porta = 3000
 debug = 1
 # ----------------------
 [MYSQL]
-host = 185.25.206.236
+host = 51.178.48.21
 port = 3306
 database_name = serversamp
 username = kekko.py
-password = ciaociao123
+password = password1234
 # ----------------------
 [CENTRAL-SERVER]
 host = 127.0.0.1
@@ -38,6 +38,7 @@ null = 255
 polizia = 0
 medici = 4
 sfnn = 5
+fbi = 1
 # ----------------------
 [POLIZIA] 
 # Arresti Massimi che può avere una possibile recluta nella propria fedina penale
