--- a/funzioni.cfg
+++ b/funzioni.cfg
@@ -21,6 +21,9 @@ pulizia_fedina = 1
 veicoli_seq = 1
 visualizza_ricercati = 1
 rimuovi_ricercati = 1
+add_veh_ricercato = 1
+rim_veh_ricercato = 1
+visualizza_veh_ricercati = 1
 
 [MEDICI]
 visualizza_cartella = 1
