--- a/gradi_fazioni.cfg
+++ b/gradi_fazioni.cfg
@@ -10,6 +10,9 @@ pulizia_fedina = 1
 rank_veicoli_seq = 9
 visualizza_ricercati = 9
 rimuovi_ricercati = 9
+add_veh_ricercato = 9
+rim_veh_ricercato = 9
+visualizza_veh_ricercati = 9
 
 [MEDICI]
 visualizza_cartella = 10
